--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -14,6 +14,6 @@ jobs:
       id: mirror
       uses: google/mirror-branch-action@v1.0
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.TOKEN }}
         source: 'main'
         dest: 'feature'
