--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -2,8 +2,8 @@ on:
   push:
     branches:
       - 'main'
-  schedule:
-    - cron: "*/2 * * * *"
+#   schedule:
+#     - cron: "*/2 * * * *"
 
 jobs:
   mirror_job:
