--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,9 +1,9 @@
-on:
-  push:
-    branches:
-      - 'main'
+# on:
+#   push:
+#     branches:
+#       - 'main'
   schedule:
-    - cron: "15 11 * * ?"
+    - cron: "25 02 * * ?"
 
 jobs:
   mirror_job:
