--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,7 +1,7 @@
-# on:
-#   push:
-#     branches:
-#       - 'main'
+on:
+  push:
+    branches:
+      - 'main'
   schedule:
     - cron: "25 02 * * ?"
 
