--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,9 +1,9 @@
 on:
-  push:
-    branches:
-      - 'main'
+#   push:
+#     branches:
+#       - 'main'
   schedule:
-    - cron: "15 05 * * ?"
+    - cron: "35 06 * * ?"
 
 jobs:
   mirror_job:
